views/Ingress.networking.internal.knative.dev.yaml
---
kind: "Ingress"
api_family: "networking.internal.knative.dev"
default_command: "ingresses.networking.internal.knative.dev"
command:
  - "ingresses.knative"
  - "ingress.knative"
  - "kningresses"
  - "kningress"
listview:
  name: "Ingresses"
  group: "Knative"
  field_indexes:
    Normal:
      fields: ["namespace", "name", "controller", "age", "ready", "reason"]
      sortcolumn: "namespace"
  fields:
    controller:
      header: "Controller:"
      paths:
        - path: "metadata#ownerReferences"
          pathtype: "items"
          subpaths:
            - "kind"
            - "apiVersion"
            - "name"
          when:
            - key: "controller"
              eq: true
          type: ["kind", "api_group", "name"]
          default: ["<none>"]
      formatter: "list"
      formatting:
        field_colors:
          - type: "kind"
          - type: "api_group"
          - type: "generic"
        field_separators:
          - type: "kind_api_group"
          - type: "kind"
    ready:
      header: "Ready:"
      paths:
        - path: "status#conditions"
          pathtype: "items"
          subpath: "status"
          when:
            - key: "type"
              eq: "Ready"
          default: ["<unset>"]
      type: "str"
      formatter: "value_mapper"
      formatting:
        mapping:
          mappings:
            "True":
              field_colors:
                - context: "main"
                  type: "status_ok"
            "False":
              field_colors:
                - context: "main"
                  type: "status_not_ok"
            "<unset>":
              field_colors:
                - context: "types"
                  type: "unset"
    reason:
      header: "Reason:"
      paths:
        - path: "status#conditions"
          pathtype: "items"
          subpath: "message"
          when:
            - key: "type"
              eq: "Ready"
      type: "str"
      formatter: "value_mapper"
      formatting:
        mapping:
          mappings:
            "True":
              field_colors:
                - context: "main"
                  type: "status_ok"
            "False":
              field_colors:
                - context: "main"
                  type: "status_not_ok"
  actions:
    actionlist:
      "Delete resource":
        description: "Delete resource"
        category: "Resource Level"
        confirm: true
        actionfunc: "delete_resource"
infoview:
  name: "Ingress Info"
  infopad:
    row_indexes:
      Normal:
        fields: ["controller", "http_option", "ready", "reason"]
    rows:
      controller:
        header: [["C", ["main", "infoheader_shortcut"]],
                 ["ontroller:", ["main", "infoheader"]]]
        paths:
          - path: "metadata#ownerReferences"
            pathtype: "items"
            subpaths:
              - "kind"
              - "apiVersion"
              - "name"
            when:
              - key: "controller"
                eq: true
            type: ["kind", "api_group", "name"]
            default: ["<none>"]
        formatter: "list"
        formatting:
          field_colors:
            - type: "kind"
            - type: "api_group"
            - type: "generic"
          field_separators:
            - type: "kind_api_group"
            - type: "kind"
      http_option:
        header: [["HTTP Option:", ["main", "infoheader"]]]
        path: "spec#httpOption"
        default: "<unset>"
        type: "str"
      ready:
        header: [["Ready:", ["main", "infoheader"]]]
        paths:
          - path: "status#conditions"
            pathtype: "items"
            subpath: "status"
            when:
              - key: "type"
                eq: "Ready"
            default: ["<unset>"]
        type: "str"
        formatter: "value_mapper"
        formatting:
          mapping:
            mappings:
              "True":
                field_colors:
                  - context: "main"
                    type: "status_ok"
              "False":
                field_colors:
                  - context: "main"
                    type: "status_not_ok"
              "<unset>":
                field_colors:
                  - context: "types"
                    type: "unset"
      reason:
        header: [["Reason:", ["main", "infoheader"]]]
        paths:
          - path: "status#conditions"
            pathtype: "items"
            subpath: "message"
            when:
              - key: "type"
                eq: "Ready"
        type: "list"
        formatter: "list"
  listpad:
    listgetter: "listgetter_path"
    listgetter_args:
      path: "spec#rules"
    infogetter: "generic_infogetter"
    field_indexes:
      Normal:
        fields: ["hosts", "visibility", "http"]
        sortcolumn: "hosts"
    fields:
      hosts:
        header: "Hosts:"
        path: "hosts"
        type: "raw"
        formatter: "list"
      http:
        header: "HTTP:"
        path: "http"
        type: "raw"
      visibility:
        header: "Visibility:"
        path: "visibility"
        type: "str"
  shortcuts:
    "Open controller":
      key: "c"
      modifier: "shift"
      read_only: true
      helptext: "Open info page for controller"
      action: "call"
      action_call: "resourceinfodispatch_with_lookup"
      action_args:
        _pass_obj: true
        namespace_path: "metadata#namespace"
        owner_reference_path: "metadata#ownerReferences"
